--- a/1.html
+++ b/1.html
@@ -4,23 +4,36 @@
 	<title> uno </title>
 </head>
 <body>
-	<h2> Ingrese su nombre </h2>
+	<h4> Ingrese su nombre </h4>
 
 	<input type ="text" name="name" id= "name"/>
+	<br />
+
+	<h4> Ingrese su apodo </h4>
 	<br />
 
 	<input type ="text" name="name" id= "nombre"/>
 	<br />
 
-	<input type ="number" name="name" id= "edad"/>
+	<h4> Ingrese su edad </h4>
+	<br />
+
+	<input type ="number" name="edad" id= "edad"/>
+	<br />
+
+	<h4> Ingrese su profesion </h4>
+	<br />
+
+	<input type ="text" name="job" id= "job"/>
 	<br />
 
 	<input type ="button" onclick= "getData()" > Enviar </button>
 	<br />
 
+	<p id = "resultado"> </p>
+
 	<script src="clase1.js">
 
-		
 	</script>
 
 </body>
