--- a/1.html
+++ b/1.html
@@ -18,7 +18,7 @@
 	<h4> Ingrese su edad </h4>
 	<br />
 
-	<input type ="number" name="edad" id= "edad"/>
+	<input type ="number" name="edad" id= "edad"/> 
 	<br />
 
 	<h4> Ingrese su profesion </h4>
@@ -27,8 +27,16 @@
 	<input type ="text" name="job" id= "job"/>
 	<br />
 
+	<h4> Ingrese su peso </h4>
+	<br />
+
+	<input type ="number" name="peso" id= "peso"/>
+	<br />
+
 	<input type ="button" onclick= "getData()" > Enviar </button>
 	<br />
+
+
 
 	<p id = "resultado"> </p>
 
