--- a/1.html
+++ b/1.html
@@ -1,45 +1,67 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title> uno </title>
-</head>
-<body>
-	<h4> Ingrese su nombre </h4>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title> Document </title>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="clase1.css">
+	</head>
+	<body>
+		
+		
+		<header>
+			<ol>
+				<li>INICIO</li>
+				<li>CONTACTO</li>
+				<li>USUARIOS</li>
+				<li>FORMULARIOS</li>
+				<li>TRAMITES</li>
+			</ol>
 
-	<input type ="text" name="name" id= "name"/>
-	<br />
+		</header>
+		<p>🤠 sombrero</p>
+		<p>😈 evil</p>
+		
+		<section>
+			<em>PAGINA PRINCIPAL DE APLICACIÓN</em> <br/>
+			<i>SUMIT</i>
+		</section>
+		<h5> FORMULARIO DE APLICACIÓN </h5>
+		<div>
+			<h4> Ingrese su nombre </h4>
+			<input type ="text" name="name" id= "name"/>
+			<br />
+			<h4> Ingrese su apodo </h4>
+			<br />
+			<input type ="text" name="name" id= "nombre"/>
+			<br />
+			<h4> Ingrese su edad </h4>
+			<br />
+			<input type ="number" name="edad" id= "edad"/> 
+			<br />
+			<h4> Ingrese su profesion </h4>
+			<br />
+			<input type ="text" name="job" id= "job"/>
+			<br />
+			<h4> Ingrese su peso </h4>
+			<br />
+			<input type ="number" name="peso" id= "peso"/>
+			<br />
+			<input type ="button" onclick= "getData()" > Enviar </button>
+			<br />
+			<p id = "resultado"> </p>
+			<br />
+		</div>
 
-	<h4> Ingrese su apodo </h4>
-	<br />
-
-	<input type ="text" name="name" id= "nombre"/>
-	<br />
-
-	<h4> Ingrese su edad </h4>
-	<br />
-
-	<input type ="number" name="edad" id= "edad"/> 
-	<br />
-
-	<h4> Ingrese su profesion </h4>
-	<br />
-
-	<input type ="text" name="job" id= "job"/>
-	<br />
-
-	<h4> Ingrese su peso </h4>
-	<br />
-
-	<input type ="number" name="peso" id= "peso"/>
-	<br />
-
-	<input type ="button" onclick= "getData()" > Enviar </button>
-	<br />
+		<script src="clase1.js">
+		</script>
+	</body>
 
 
-	<script src="clase1.js">
 
-	</script>
+	<footer>
+	 ndev85 Creation
+	</footer>
 
-</body>
 </html>
