--- a/1.html
+++ b/1.html
@@ -48,10 +48,16 @@
 			<br />
 			<input type ="number" name="peso" id= "peso"/>
 			<br />
+			<h4> Ingrese su signo </h4>
+			<br />
+			<input type ="text" name="signo" id= "signo"/>
+			<br />
+
 			<input type ="button" onclick= "getData()" > Enviar </button>
 			<br />
 			<p id = "resultado"> </p>
 			<br />
+		
 		</div>
 
 		<script src="clase1.js">
